# Textyle-backend-ver0.2

./: .env  Cargo.toml  Rocket.toml
migrations/2024-06-20-042606_create_users/: up.sql
migrations/2024-07-06-124656_user_histories/: down.sql  up.sql
src/: jwt_verification.rs  main.rs  model.py  schema.rs  token_response.rs
src/error_types/: fetch_history_error.rs  login_error.rs  mod.rs  sign_up_error.rs
src/structs/: claims.rs  data_prompt.rs  login_form.rs  ml_result.rs  mod.rs  user_history.rs  user_struct.rs
